2004-08-29 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkgrm.in: Written.
	* man/pkgrm.8.in: Written.

	* man/pkgadd.8.in, man/pkginstall.8.in: Changed man page header to
          correclty reflect section 8 of the man pages.

2004-08-17 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/usage_error: Renamed usage_error.bash.in to
	  stderr.bash.in.
	* testsuite/libprometheus/usage_error: Added stdout.bash.in &
	  status.bash.in.
	* testsuite/libprometheus/script_usage_err: Renamed
	  script_usage_err.bash.in to stderr.bash.in.
	* testsuite/libprometheus/script_usage_err: Added stdout.bash.in &
	  status.bash.in.

	* testsuite/runtest: Removed.
	* testsuite/runtest.in: Added.
	* testsuite/TEMPLATE: Added.
	* testsuite/*: Updated for new script.

2004-08-16 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/Makefile: Made test descriptions more useful.

	* testsuite/libprometheus/setup_logging/*: Added.

2004-08-15 Gareth Jones <gareth_jones@users.berlios.de>

	* Makefile: Added building testsuite & check target.
	* testsuite/Makefile: Added.
	* testsuite/README: Added.

	* testsuite/runtest: Added.
	* testsuite/runtest: Fixed to run in tests' own directories.
	* testsuite/runtest: Added logging.

	* testsuite/libprometheus/Makefile: Added.
	* testsuite/libprometheus/finish/success.bash.in: Added.
	* testsuite/libprometheus/finish/failure.bash.in: Added.
	* testsuite/libprometheus/terminated/terminated.bash.in: Added.
	* testsuite/libprometheus/pipestat/*: Added.
	* testsuite/libprometheus/warning/*: Added.
	* testsuite/libprometheus/failure/*: Added.
	* testsuite/libprometheus/error/*: Added.
	* testsuite/libprometheus/usage_error/*: Added.
	* testsuite/libprometheus/script_usage_err/*: Added.

2004-08-12 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgunpack.in (unpack_archives): Make sure build directories
	  exist.

	* scripts/pkginstall.in (cleanup_failed): Added FIXME for restoring